--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
   mongo-db:
     image: mongo:6.0
     container_name: mongo-db
+    restart: always
     ports:
       - "27017:27017"
     volumes:
